--- a/src/views/components/_children-sound.pug
+++ b/src/views/components/_children-sound.pug
@@ -1,8 +1,8 @@
-.c-sec-children-sound
+.c-sec-children-sound._d-none
   .c-sec-children-sound__inner
     .c-children-sound(id='children-sound')
       .c-children-sound__heading
-        h2.c-heading-type1 Children Sounds
+        h2.c-heading-type1 เสียงจากน้อง ๆ
 
       .c-children-sound__container.swiper-container.js-children-sound-slider
         .c-children-sound__wrapper.swiper-wrapper
