--- a/src/views/components/_footer.pug
+++ b/src/views/components/_footer.pug
@@ -2,30 +2,30 @@
   .c-footer__in
     .c-footer__container
       a.c-footer__logo(href="/")
-        img(src="assets/images/common/logo_footer.png", alt="")
+        img(src="assets/images/common/logo_footer.png", alt="akara")
 
       .c-footer__info
         .c-footer__phone
-          p.c-footer__phone-title Phone
+          p.c-footer__phone-title โทร.
           .c-footer__phone-text
             p TEL #[a(href="tel:037349885") 037-349-885], #[a(href="tel:09238077713") 092-3807771-3]
             p FAX  037-349-886
 
         .c-footer__address
-          p.c-footer__address-title Address
+          p.c-footer__address-title ที่อยู่
           .c-footer__address-text
             p บริษัท อัครากรุ๊ป จำกัด#[br]88 หมู่ 2 ต.ป่าขะ อ.บ้านนา จ.นครนายก 26110
             br
             p วันและเวลาทำการ วันจันทร์ – วันเสาร์ #[br]08.00 – 17.00
 
         .c-footer__social
-          p.c-footer__social-title Our Social Networks
+          p.c-footer__social-title ช่องทางการติดตามข่าวสาร
           .c-footer__social-list
             a(href="https://www.facebook.com/akaragroupTH" target="_blank")
               img(src="assets/images/common/ico_fb.svg", alt="Facebook")
-            a(href="https://twitter.com/akaragroupth" target="_blank")
-              img(src="assets/images/common/ico_tw.svg", alt="Twitter")
-            a(href="mailto:webadmin@akaragroup.co.th")
+            a(href="https://www.youtube.com/channel/UCACP4vYwPZLgrucq-5mu1zQ" target="_blank")
+              img(src="assets/images/common/ico_yt.svg", alt="Youtube")
+            a(href="https://www.instagram.com/akarabrand/?hl=en" target="_blank")
               img(src="assets/images/common/ico_ig.svg", alt="Instagram")
 
     p.c-footer__copyright Copyright 2020 Akaragroup | All Rights Reserved
