--- a/src/views/components/_gnav.pug
+++ b/src/views/components/_gnav.pug
@@ -7,22 +7,22 @@
     ul.c-gnav__list
       li.c-gnav__item
         a.c-gnav__link(href='#problems')
-          img.c-gnav__icon(src='assets/images/common/ico_problem.svg' alt='Problems')
-          .c-gnav__text Problems
+          img.c-gnav__icon(src='assets/images/common/ico_problem.svg' alt='ที่มาของโครงการ')
+          .c-gnav__text ที่มาของโครงการ
       li.c-gnav__item
         a.c-gnav__link(href='#campaign')
-          img.c-gnav__icon(src='assets/images/common/ico_campaign.svg' alt='Our campaign')
-          .c-gnav__text Our campaign
+          img.c-gnav__icon(src='assets/images/common/ico_campaign.svg' alt='เกี่ยวกับโครงการ')
+          .c-gnav__text เกี่ยวกับโครงการ
+      li.c-gnav__item
+        a.c-gnav__link(href='#how-we-do')
+          img.c-gnav__icon(src='assets/images/common/ico_how.svg' alt='วิธีดำเนินการ')
+          .c-gnav__text วิธีดำเนินการ
       li.c-gnav__item
         a.c-gnav__link(href='#activities')
-          img.c-gnav__icon(src='assets/images/common/ico_activities.svg' alt='Activities')
-          .c-gnav__text Activities
+          img.c-gnav__icon(src='assets/images/common/ico_activities.svg' alt='กิจกรรม')
+          .c-gnav__text กิจกรรม
       li.c-gnav__item
         a.c-gnav__link(href='#children-sound')
-          img.c-gnav__icon(src='assets/images/common/ico_children.svg' alt='Children Sounds')
-          .c-gnav__text Children Sounds
-      li.c-gnav__item
-        a.c-gnav__link(href='#contact')
-          img.c-gnav__icon(src='assets/images/common/ico_contact.svg' alt='Contact us')
-          .c-gnav__text Contact us
+          img.c-gnav__icon(src='assets/images/common/ico_children.svg' alt='เสียงจากน้อง ๆ')
+          .c-gnav__text เสียงจากน้อง ๆ
 // /nav-global
