--- a/src/views/components/_why-we-do.pug
+++ b/src/views/components/_why-we-do.pug
@@ -6,21 +6,22 @@
       .c-why-we-do__wrapper.swiper-wrapper
         .c-why-we-do__slider.swiper-slide
           .c-why-we-do__box
-            p.c-heading-type1.c-why-we-do__label Why We Do
-            p.c-why-we-do__heading ปัญหาความยากจนและขาดแคลน
+            p.c-heading-type1.c-why-we-do__label ที่มาของโครงการ
+            p.c-why-we-do__heading ปัญหาความยากจนและขาดแคลนอาหาร
             .c-why-we-do__content
-              p ปัญหาการขาดแคลนอาหาร ถือเป็นหนึ่งในปัญหาหลัก ๆ ที่นักเรียนในพื้นที่ห่างไกลส่วนใหญ่ต้องเผชิญ ทั้งสาเหตุที่เกิดขึ้นจากปัญหาความยากจน การขาดความรู้ด้านโภชนาการที่เพียงพอส่งผลให้นักเรียนส่วนใหญ่ในชนบทเกิดภาวะทุพโภชนาการ อีกทั้งจากปัญหาวิกฤติโควิด-19 ที่เกิดขึ้น ซึ่งทำให้เกิดภาวะขาดแคลนโภชนาการที่รุนแรงมากยิ่งขึ้นจากการที่เด็กนักเรียนไม่สามารถเดินทางไปเรียนได้ เนื่องจากโรงเรียนไม่ใช่แค่แหล่งเรียนรู้เพียงอย่างเดียว แต่ยังเป็นสถานที่ ๆ เด็ก ๆ จะได้รับประทานอาหารที่มีสารอาหารครบถ้วนอย่างพอเพียง
+              p จากวิกฤติโควิด-19 ที่ผ่านมาซึ่งส่งผลกระทบต่อผู้คนทั่วโลก รวมถึงในประเทศไทยเองก็ได้รับผลกระทบเช่นเดียวกัน ทั้งบริษัทที่ต้องปิดตัวลง หรือเด็กนักเรียนที่ต้องหยุดเรียนในช่วงโควิด โดยเฉพาะกับน้อง ๆ นักเรียนในถิ่นทุรกันดารที่ได้รับผลกระทบเป็นอย่างมากเพราะผลกระทบจากปัญหาเศรษฐกิจและความยากจน
+              br
+              p นักเรียนยากจนพิเศษกว่า 100,000 คน ภายใต้การดูแลของ กสศ. (กองทุนเพื่อความเสมอภาคทางการศึกษา) เกิดปัญหาภาวะทุพโภชนาการหรือภาวะขาดแคลนอาหาร เพราะสำหรับน้อง ๆ เหล่านี้ โรงเรียนไม่ใช่แค่สถานศึกษา แต่ยังเป็นสถานที่ที่น้อง ๆ จะได้รับสารอาหารอย่างพอเพียงจากอาหารกลางวันที่ได้รับประทานในโรงเรียน 
           .c-why-we-do__box
             figure.c-why-we-do__frame
               img.c-why-we-doimage(src="assets/images/why-we-do/img_whywedo_01.jpg", alt="ปัญหาความยากจนและขาดแคลน")
         //- c-why-we-do__slider
         .c-why-we-do__slider.swiper-slide
           .c-why-we-do__box
-            p.c-heading-type1.c-why-we-do__label Why We Do
-            p.c-why-we-do__heading เด็กๆ ที่มีความยากจน
+            p.c-heading-type1.c-why-we-do__label ที่มาของโครงการ
+            p.c-why-we-do__heading น้อง ๆ ที่ประสบปัญหาทุพโภชนาการ
             .c-why-we-do__content
-              p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mi felis, auctor vitae vestibulum vel, consequat eu dolor. Nam pellentesque euismod laoreet. Aliquam sed nisl porttitor nisl laoreet semper nec iaculis nibh. Curabitur in tortor lorem.
-              p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mi felis, auctor vitae vestibulum vel, consequat eu dolor. Nam pellentesque euismod laoreet. Aliquam sed nisl porttitor nisl laoreet semper nec iaculis nibh. Curabitur in tortor lorem.
+              p โดยจากผลการสำรวจของ กสศ. พบว่านักเรียนกลุ่มยากจนพิเศษ กว่า 100,000 คน มีน้ำหนักน้อยกว่าเกณฑ์มากถึง 46,053 คน และน้ำหนักน้อย 54,108 คน ซึ่งส่วนใหญ่เป็นนักเรียนชั้นประถมศึกษากว่า 73% ซึ่งส่วนใหญ่อยู่ในพื้นที่ห่างไกล และประสบปัญหาขาดแคลนอาหารมาเป็นเวลานาน ซึ่งสะสมมาจากความยากจนของครอบครัว ความไม่สะดวกในการประกอบอาหาร รวมถึงการขาดความรู้ด้านโภชนาการ จนทำให้น้อง ๆ กลุ่มนี้มีปัญหาทางด้านการเจริญเติบโตทั้งทางร่างกาย สติปัญหา และความสามารถในการเรียนรู้
           .c-why-we-do__box
             figure.c-why-we-do__frame
               img.c-why-we-doimage(src="assets/images/why-we-do/img_whywedo_02.jpg", alt="เด็กๆ ที่มีความยากจน")
@@ -50,11 +51,13 @@
 
     .c-what-we-do__content-box.js-inview.u-fade-in
       .c-what-we-do__label
-        h2.c-heading-type1 What We Do
+        h2.c-heading-type1 เกี่ยวกับโครงการ
       .js-inview.u-fade-in-up
-        .c-what-we-do__heading อาสาปันอิ่ม ปันยิ้มให้สังคม
+        .c-what-we-do__heading อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม
         .c-what-we-do__content
-          p โครงการ ‘อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม’ ร่วมกับ โครงการ ‘มื้อนี้ พี่เลี้ยง’ ภายใต้การดาเนินงานของกองทุนเพื่อความเสมอภาคทางการศึกษา (กสศ.) เกิดขึ้นจากวัตถุประสงค์เพื่อช่วยเหลือเด็ก ๆ ภายในโครงการของ กสศ. ที่เกิดปัญหาขาดแคลนอาหารและภาวะทุพโภชนาการ สืบเนื่องมาจากปัญหาความยากจนและเผชิญกับวิกฤติโควิด -19 เรามุ่งมั่นที่จะช่วยเหลือนักเรียนยากจนพิเศษภายใต้โครงการของ กสศ. กว่า 100,000 คนทั่วประเทศ ให้ได้มีโภชนาการทางด้านอาหารและความเป็นอยู่ที่ดีขึ้น
+          p โครงการ ‘อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม’ ร่วมกับ โครงการ ‘มื้อนี้ พี่เลี้ยง’ ภายใต้การดำเนินงานของ กสศ. มีวัตถุประสงค์เพื่อช่วยเหลือน้อง ๆ กว่า 100,000 คน ที่ประสบปัญหาขาดแคลนอาหารและภาวะทุพโภชนาการ
+          br
+          p โดยวิธีการดำเนินการของเรา คือ ทุก ๆ การหยิบสินค้าไข่ไก่อัครา 1 แพ็ค เราสมทบไข่ไก่มอบให้กับน้อง ๆ เพิ่มอีก 2 ฟอง เพื่อสนับสนุนให้น้อง ๆ ได้รับสารอาหารที่พอเพียงต่อร่างกาย มีโภชนาการทางด้านอาหารและความเป็นอยู่ที่ดีขึ้นอย่างยั่งยืนในระยะยาว
       .c-box-arrow
         a.c-arrow(href='#how-we-do')
           img.c-arrow-animaton(src="assets/images/common/ico_arrow_down_white.svg", alt="")
@@ -62,28 +65,26 @@
 .c-how-we-do(id='how-we-do')
   .c-how-we-do__inner
     .c-how-we-do__label
-      h2.c-heading-type1.c-heading-type1--blue.js-inview.u-fade-in-pop How We Do
-    .c-how-we-do__msg.js-inview.u-fade-in-pop
-      p We strive for better community empowerment, and livelihood improvement an entry point.
+      h2.c-heading-type1.c-heading-type1--blue.js-inview.u-fade-in-pop วิธีดำเนินการ
     .c-how-we-do__list
       .c-how-we-do__item.js-inview.u-fade-in-pop
         .c-how-we-do__card
           figure.c-how-we-do__icon
             img(src="assets/images/how-we-do/ico_how_we_do_01.svg", alt="หยิบ 1 แพ็ค ส่งต่อ 2 ฟอง")
           .c-how-we-do__heading
-            |หยิบ 1 แพ็ค
+            | หยิบ 1 แพ็ค
             br._d-sm-block._d-md-none
             | ส่งต่อ 2 ฟอง
           .c-how-we-do__text
-            p เพียงมองหาสติกเกอร์ อัครา อาสาปันอิ่มปันยิ้มให้สังคม ที่ติดอยู่บนหน้าแพ็ค (แพ็ค 10 ฟอง) ทุก ๆ การซื้อ 1 แพ็ค อัคราร่วมบริจาคไข่ไก่เพิ่มอีก 2 ฟอง เพื่อมอบให้กับน้อง ๆ ที่ขาดแคลน โดยมีเป้าหมายการบริจาคทั้งหมด 100,000 ฟอง
+            p ทุก ๆ การหยิบสินค้าไข่ไก่อัครา 1 แพ็ค (แพ็ค 10 ฟอง) ที่มีสติกเกอร์โครงการ ‘อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม’ แปะอยู่บนแพ็ค อัคราบริจาคไข่ไก่เพิ่มอีก 2 ฟอง โดยมีเป้าหมายการบริจาคทั้งหมด 100,000 ฟอง
       .c-how-we-do__item.js-inview.u-fade-in-pop
         .c-how-we-do__card
           figure.c-how-we-do__icon
             img(src="assets/images/how-we-do/ico_how_we_do_02.svg", alt="ร่วมส่งต่อกำลังใจ")
           .c-how-we-do__heading
-            |ร่วมส่งต่อกำลังใจ
+            | ร่วมส่งต่อกำลังใจ
           .c-how-we-do__text
-            p ทุก ๆ การซื้อ 1 แพ็ค คุณก็สามารถร่วมเป็นส่วนหนึ่งในการส่งต่อกำลังใจให้กับน้อง ๆ ได้ง่าย ๆ เพียง เขียนข้อความลงบนแผ่นพับที่อยู่ภายในกล่อง ถ่ายภาพลง Social Media แล้วติด # มาที่ #อัคราอาสาปันอิ่มปันยิ้มให้สังคม ข้อความที่ถูกส่งเข้ามาเราจะนำไปมอบต่อให้กับน้อง ๆ ภายในโครงการ
+            p เป็นส่วนหนึ่งในการส่งมอบกำลังใจให้กับน้อง ๆ เพียงเขียนข้อความให้กำลังใจลงในการ์ดที่แนบมาในแพ็ค แล้วแชร์ลง Social Media พร้อมติด #อัคราอาสาปันอิ่มปันยิ้มให้สังคม ข้อความที่ส่งเข้ามาอัคราจะนำไปมอบต่อให้น้อง ๆ ภายในโครงการ
       .c-how-we-do__item.js-inview.u-fade-in-pop
         .c-how-we-do__card
           figure.c-how-we-do__icon
@@ -91,16 +92,15 @@
           .c-how-we-do__heading
             |แบ่งปันรอยยิ้ม
           .c-how-we-do__text
-            p ไข่ไก่ที่ได้รับจากการบริจาค อัครา ร่วมกับอาสาสมัครที่สนใจ อาสาลงพื้นที่เพื่อนำไปมอบให้กับโรงเรียนที่ขาดแคลน พร้อมปรุงอาหารโดยเชฟมืออาชีพ เพื่อช่วยเหลือน้อง ๆ ที่มีภาวะขาดแคลนโภชนาการ
+            p อัครา เปิดรับอาสาสมัครที่สนใจ ร่วมกันลงพื้นที่เพื่อนำไข่ไก่ที่ได้จากโครงการไปมอบให้กับโรงเรียนในพื้นที่ขาดแคลน พร้อมปรุงอาหารที่มีโภชนาการครบถ้วนโดยเชฟมืออาชีพ ‘เดียว มาสเตอร์เชฟ’
 .c-our-impact.js-inview
   .c-our-impact__inner
     .c-our-impact__box-heading.js-inview.u-fade-in-down
-      h2.c-heading-type1 Our Impact
       .c-our-impact__heading ยอดร่วมบริจาคล่าสุดของเรา
     .c-our-impact__box-donate.js-inview.u-fade-in-down
       .c-our-impact__box-donate-item
-        .c-our-impact__box-donate-number.js-inview-number(data-number="6") 0
-        .c-our-impact__box-donate-text เดือน
+        .c-our-impact__box-donate-number.js-inview-number(data-number="126") 0
+        .c-our-impact__box-donate-text วัน
       .c-our-impact__box-donate-item
         .c-our-impact__box-donate-number.js-inview-number(data-number="8500") 0
         .c-our-impact__box-donate-text ฟอง
@@ -115,9 +115,7 @@
   .c-activity__inner
     .c-activity__box-title.js-inview.u-fade-in-up
       .c-activity__box-label
-        h2.c-heading-type1 Activities
-      .c-activity__box-heading
-        .c-activity__heading ALL ENTRIES
+        h2.c-heading-type1 กิจกรรม
     
     .c-activity__nav.js-activity-nav
       span.c-activity__nav-prev.is-disabled
@@ -126,26 +124,29 @@
     .c-activity__box-list
       .c-activity__list.js-activity-scroller
         .c-activity__row.js-activity-row
-          .c-activity__item.js-inview.u-fade-in-up.js-point
+          a(href="https://www.eef.or.th/11-09-20/" target="_blank").c-activity__item.js-inview.u-fade-in-up.js-point
             .c-activity__card
               figure.c-activity__frame
-                img.c-activity__image(src="assets/images/activity/img_activity_01.png", alt="")
-              .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
-              .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
-          .c-activity__item.js-inview.u-fade-in-up
+                img.c-activity__image(src="assets/images/activity/img_activity_01.jpg", alt="กสศ. จับมือภาคเอกชน เปิดตัวแคมเปญ ‘มื้อนี้พี่เลี้ยง‘ บรรเทาภาวะขาดสารอาหารของนร.ยากจนพิเศษหลังโควิด-19")
+              .c-activity__title กสศ. จับมือภาคเอกชน เปิดตัวแคมเปญ ‘มื้อนี้พี่เลี้ยง‘ บรรเทาภาวะขาดสารอาหารของนร.ยากจนพิเศษหลังโควิด-19
+              .c-activity__text กสศ.เผย ระบบติดตามผล iSEE ชี้นักเรียนยากจนพิเศษกว่าแสนคนมีภาวะขาดสารอาหาร แพทย์หวั่นกระทบทั้งพัฒนาการและการเรียนรู้ระยะยาว
+          a(href="https://www.thairath.co.th/news/local/bangkok/1928233" target="_blank").c-activity__item.js-inview.u-fade-in-up
             .c-activity__card
               figure.c-activity__frame
-                img.c-activity__image(src="assets/images/activity/img_activity_02.png", alt="")
-              .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
-              .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
-          .c-activity__item.js-inview.u-fade-in-up.-big.-orange.js-point
+                img.c-activity__image(src="assets/images/activity/img_activity_02.jpg", alt="กสศ.จับมือเอกชน เปิดตัว ‘มื้อนี้พี่เลี้ยง’ บรรเทา นร.ยากจน ขาดสารอาหาร")
+              .c-activity__title กสศ.จับมือเอกชน เปิดตัว ‘มื้อนี้พี่เลี้ยง’ บรรเทา นร.ยากจน ขาดสารอาหาร
+              .c-activity__text กสศ.เผย iSEE ชี้ นร.ยากจนพิเศษกว่าแสนคน ขาดสารอาหาร แพทย์ หวั่น กระทบทั้งพัฒนาการ-การเรียนรู้ จับมือ เอกชนเปิดตัว “มื้อนี้พี่เลี้ยง” ช่วยเหลือหลังโควิด-19
+          a(href="https://www.posttoday.com/social/general/632741" target="_blank").c-activity__item.js-inview.u-fade-in-up.-big.-orange.js-point
             .c-activity__card
               figure.c-activity__frame
-                img.c-activity__image._d-md-none(src="assets/images/activity/img_activity_04_sp.png", alt="")
-                img.c-activity__image._d-sm-none(src="assets/images/activity/img_activity_04_pc.png", alt="")
-              .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
-              .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
-
+                img.c-activity__image(src="assets/images/activity/img_activity_04.jpg", alt="กสศ.ช่วยนักเรียนยากจนพิเศษขาดสารอาหารหลังโควิด-19")
+              .c-activity__title กสศ.ช่วยนักเรียนยากจนพิเศษขาดสารอาหารหลังโควิด-19
+              .c-activity__text
+                | "มื้อนี้พี่เลี้ยง"กสศ. ระดมความร่วมมือกับภาคเอกชนบรรเทาภาวะขาดสารอาหารของนักเรียนยากจนพิเศษหลังโควิด-19
+                br
+                br
+                br
+        //-
           .c-activity__item.js-point
             .c-activity__card
               figure.c-activity__frame
@@ -165,29 +166,30 @@
                 img.c-activity__image._d-sm-none(src="assets/images/activity/img_activity_04_pc.png", alt="")
               .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
               .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
+        -//
 
         .c-activity__row
-          .c-activity__item.js-inview.u-fade-in-up.-big.-blue
+          a(href="https://tna.mcot.net/social-535973" target="_blank").c-activity__item.js-inview.u-fade-in-up.-big.-blue
             .c-activity__card
               figure.c-activity__frame
-                img.c-activity__image._d-md-none(src="assets/images/activity/img_activity_03_sp.png", alt="")
-                img.c-activity__image._d-sm-none(src="assets/images/activity/img_activity_03_pc.png", alt="")
+                img.c-activity__image(src="assets/images/activity/img_activity_03.jpg", alt="“มื้อนี้พี่เลี้ยง” ลดภาวะขาดสารอาหาร นร.ยากจนพิเศษ")
               .c-activity__box-absolute
-                .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
-                .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
-          .c-activity__item.js-inview.u-fade-in-up
+                .c-activity__title “มื้อนี้พี่เลี้ยง” ลดภาวะขาดสารอาหาร นร.ยากจนพิเศษ
+                .c-activity__text กรุงเทพฯ 11 ก.ย..-กสศ.- ภาคเอกชน เปิดตัวแคมเปญ ‘มื้อนี้พี่เลี้ยง’ ระดมความร่วมมือบรรเทาภาวะขาดสารอาหารของนักเรียนยากจนพิเศษหลังโควิด-19
+          a(href="https://www.thairath.co.th/news/local/bangkok/1928233" target="_blank").c-activity__item.js-inview.u-fade-in-up
             .c-activity__card
               figure.c-activity__frame
-                img.c-activity__image(src="assets/images/activity/img_activity_05.png", alt="")
-              .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
-              .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
-          .c-activity__item.js-inview.u-fade-in-up
+                img.c-activity__image(src="assets/images/activity/img_activity_02.jpg", alt="กสศ.จับมือเอกชน เปิดตัว ‘มื้อนี้พี่เลี้ยง’ บรรเทา นร.ยากจน ขาดสารอาหาร")
+              .c-activity__title กสศ.จับมือเอกชน เปิดตัว ‘มื้อนี้พี่เลี้ยง’ บรรเทา นร.ยากจน ขาดสารอาหาร
+              //- .c-activity__text กสศ.เผย iSEE ชี้ นร.ยากจนพิเศษกว่าแสนคน ขาดสารอาหาร แพทย์ หวั่น กระทบทั้งพัฒนาการ-การเรียนรู้ จับมือ เอกชนเปิดตัว “มื้อนี้พี่เลี้ยง” ช่วยเหลือหลังโควิด-19
+          a(href="https://www.thairath.co.th/news/local/bangkok/1928233" target="_blank").c-activity__item.js-inview.u-fade-in-up
             .c-activity__card
               figure.c-activity__frame
-                img.c-activity__image(src="assets/images/activity/img_activity_06.png", alt="")
-              .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
-              .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
+                img.c-activity__image(src="assets/images/activity/img_activity_02.jpg", alt="กสศ.จับมือเอกชน เปิดตัว ‘มื้อนี้พี่เลี้ยง’ บรรเทา นร.ยากจน ขาดสารอาหาร")
+              .c-activity__title กสศ.จับมือเอกชน เปิดตัว ‘มื้อนี้พี่เลี้ยง’ บรรเทา นร.ยากจน ขาดสารอาหาร
+              //- .c-activity__text กสศ.เผย iSEE ชี้ นร.ยากจนพิเศษกว่าแสนคน ขาดสารอาหาร แพทย์ หวั่น กระทบทั้งพัฒนาการ-การเรียนรู้
 
+        //-
           .c-activity__item.-big.-blue
             .c-activity__card
               figure.c-activity__frame
@@ -208,3 +210,4 @@
                 img.c-activity__image(src="assets/images/activity/img_activity_06.png", alt="")
               .c-activity__title Lorem ipsum dolor sit amet, consectet adipiscing elit.
               .c-activity__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.
+        //-
