--- a/src/views/components/_hero.pug
+++ b/src/views/components/_hero.pug
@@ -42,15 +42,15 @@
     button.c-hero__btn-menu(type='button', id='btn-open-menu') Menu
     .c-hero-heading
       .js-inview.u-fade-in-up
-        .c-hero-heading__tag AKARA
+        .c-hero-heading__tag akara
         h2.c-hero-heading__title อาสาปันอิ่ม<br>ปันยิ้มให้สังคม
         a.c-hero-heading__btn-video.js-modal-video(href='https://www.youtube.com/embed/8dVSeHLBYsQ?autoplay=1', target='_blank') Watch the video
     .c-hero-count.js-inview
       .c-hero-count__title ยอดร่วมบริจาคล่าสุด
       .c-hero-count__list.js-total-donate
         .c-hero-count__list-item
-          .c-hero-count__number.js-inview-number(data-number="6") 0
-          .c-hero-count__unit เดือน
+          .c-hero-count__number.js-inview-number(data-number="126") 0
+          .c-hero-count__unit วัน
         .c-hero-count__list-item
           .c-hero-count__number.js-inview-number(data-number="8500") 0
           .c-hero-count__unit ฟอง
