--- a/src/views/components/_lets-share.pug
+++ b/src/views/components/_lets-share.pug
@@ -2,19 +2,19 @@ section.c-lets-share
   .c-lets-share__bg.js-inview
   .c-lets-share__in
     .c-lets-share__content.js-inview.u-fade-in-up
-      h2.c-heading-type1.c-lets-share__heading LET'S SHARE
+      h2.c-heading-type1.c-lets-share__heading ส่งต่อเรื่องราวดี ๆ
       .c-lets-share__content-in.js-inview.u-fade-in-up
-        p.c-lets-share__text "Thank you. #[br]Your donation helps support children in need"
+        p.c-lets-share__text "ทุก ๆ การแบ่งปันของคุณ ช่วยเติมรอยยิ้มให้กับน้อง ๆ"
         ul.c-lets-share__list
           li.c-lets-share__list-item
-            a(href="https://twitter.com/akaragroupth" target="_blank")
-              img(src="assets/images/lets-share/btn_tw.png", alt="Twitter")
+            a(href="https://www.youtube.com/channel/UCACP4vYwPZLgrucq-5mu1zQ" target="_blank")
+              img(src="assets/images/lets-share/btn_yt.png", alt="Youtube")
           li.c-lets-share__list-item
             a(href="https://www.facebook.com/akaragroupTH" target="_blank")
               img(src="assets/images/lets-share/btn_fb.png", alt="Facebook")
           li.c-lets-share__list-item
-            a(href="mailto:webadmin@akaragroup.co.th")
-              img(src="assets/images/lets-share/btn_email.png", alt="Email")
+            a(href="https://www.instagram.com/akarabrand/?hl=en" target="_blank")
+              img(src="assets/images/lets-share/btn_ig.png", alt="Instagram")
     // /c-lets-share__content
   // /c-lets-share__in
 // /c-lets-share
