--- a/src/views/components/_our-associate.pug
+++ b/src/views/components/_our-associate.pug
@@ -1,7 +1,7 @@
 section.c-our-associate
   .c-our-associate__in
     .js-inview.u-fade-in-up
-      h2.c-heading-type1.c-our-associate__label OUR ASSOCIATE
+      h2.c-heading-type1.c-our-associate__label กำลังใจจาก ‘พี่’ ถึง ‘น้อง’
       h2.c-our-associate__title ข้อความจากผู้ร่วมโครงการ
 
     .c-our-associate__list.js-our-associate-list
