update: Final update #2

--- a/src/views/components/_why-we-do.pug
+++ b/src/views/components/_why-we-do.pug
@@ -129,19 +129,23 @@
               figure.c-activity__frame
                 img.c-activity__image(src="assets/images/activity/img_activity_01.jpg", alt="กสศ. จับมือภาคเอกชน เปิดตัวแคมเปญ ‘มื้อนี้พี่เลี้ยง‘ บรรเทาภาวะขาดสารอาหารของนร.ยากจนพิเศษหลังโควิด-19")
               .c-activity__title กสศ. จับมือภาคเอกชน เปิดตัวแคมเปญ ‘มื้อนี้พี่เลี้ยง‘ บรรเทาภาวะขาดสารอาหารของนร.ยากจนพิเศษหลังโควิด-19
-              .c-activity__text กสศ.เผย ระบบติดตามผล iSEE ชี้นักเรียนยากจนพิเศษกว่าแสนคนมีภาวะขาดสารอาหาร แพทย์หวั่นกระทบทั้งพัฒนาการและการเรียนรู้ระยะยาว
+              //- .c-activity__text กสศ.เผย ระบบติดตามผล iSEE ชี้นักเรียนยากจนพิเศษกว่าแสนคนมีภาวะขาดสารอาหาร แพทย์หวั่นกระทบทั้งพัฒนาการและการเรียนรู้ระยะยาว
           a(href="https://www.thairath.co.th/news/local/bangkok/1928233" target="_blank").c-activity__item.js-inview.u-fade-in-up
             .c-activity__card
               figure.c-activity__frame
                 img.c-activity__image(src="assets/images/activity/img_activity_02.jpg", alt="กสศ.จับมือเอกชน เปิดตัว ‘มื้อนี้พี่เลี้ยง’ บรรเทา นร.ยากจน ขาดสารอาหาร")
               .c-activity__title กสศ.จับมือเอกชน เปิดตัว ‘มื้อนี้พี่เลี้ยง’ บรรเทา นร.ยากจน ขาดสารอาหาร
-              .c-activity__text กสศ.เผย iSEE ชี้ นร.ยากจนพิเศษกว่าแสนคน ขาดสารอาหาร แพทย์ หวั่น กระทบทั้งพัฒนาการ-การเรียนรู้ จับมือ เอกชนเปิดตัว “มื้อนี้พี่เลี้ยง” ช่วยเหลือหลังโควิด-19
+              //- .c-activity__text กสศ.เผย iSEE ชี้ นร.ยากจนพิเศษกว่าแสนคน ขาดสารอาหาร แพทย์ หวั่น กระทบทั้งพัฒนาการ-การเรียนรู้ จับมือ เอกชนเปิดตัว “มื้อนี้พี่เลี้ยง” ช่วยเหลือหลังโควิด-19
           a(href="https://www.posttoday.com/social/general/632741" target="_blank").c-activity__item.js-inview.u-fade-in-up.-big.-orange.js-point
             .c-activity__card
               figure.c-activity__frame
                 img.c-activity__image(src="assets/images/activity/img_activity_04.jpg", alt="กสศ.ช่วยนักเรียนยากจนพิเศษขาดสารอาหารหลังโควิด-19")
-              .c-activity__title กสศ.ช่วยนักเรียนยากจนพิเศษขาดสารอาหารหลังโควิด-19
-              .c-activity__text
+              .c-activity__title
+                | กสศ.ช่วยนักเรียนยากจนพิเศษขาดสารอาหารหลังโควิด-19
+                br._d-md-none
+                br._d-md-none
+                br._d-md-none
+              //- .c-activity__text
                 | "มื้อนี้พี่เลี้ยง"กสศ. ระดมความร่วมมือกับภาคเอกชนบรรเทาภาวะขาดสารอาหารของนักเรียนยากจนพิเศษหลังโควิด-19
                 br
                 br
@@ -175,7 +179,7 @@
                 img.c-activity__image(src="assets/images/activity/img_activity_03.jpg", alt="“มื้อนี้พี่เลี้ยง” ลดภาวะขาดสารอาหาร นร.ยากจนพิเศษ")
               .c-activity__box-absolute
                 .c-activity__title “มื้อนี้พี่เลี้ยง” ลดภาวะขาดสารอาหาร นร.ยากจนพิเศษ
-                .c-activity__text กรุงเทพฯ 11 ก.ย..-กสศ.- ภาคเอกชน เปิดตัวแคมเปญ ‘มื้อนี้พี่เลี้ยง’ ระดมความร่วมมือบรรเทาภาวะขาดสารอาหารของนักเรียนยากจนพิเศษหลังโควิด-19
+                //- .c-activity__text กรุงเทพฯ 11 ก.ย..-กสศ.- ภาคเอกชน เปิดตัวแคมเปญ ‘มื้อนี้พี่เลี้ยง’ ระดมความร่วมมือบรรเทาภาวะขาดสารอาหารของนักเรียนยากจนพิเศษหลังโควิด-19
           a(href="https://www.thairath.co.th/news/local/bangkok/1928233" target="_blank").c-activity__item.js-inview.u-fade-in-up
             .c-activity__card
               figure.c-activity__frame
