update: Final update 2nd

--- a/src/styles/common/components/_our_impact.scss
+++ b/src/styles/common/components/_our_impact.scss
@@ -1,7 +1,7 @@
 .c-our-impact {
   background: url(../images/our-impact/bg_our_impact_pc.jpg) top center no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 450px;
   margin: 0;
   position: relative;
 
