--- a/src/styles/common/components/_activity.scss
+++ b/src/styles/common/components/_activity.scss
@@ -1,11 +1,24 @@
 .c-activity {
   $this: &;
 
+  position: relative;
   background: #f2f2f2;
   padding: 50px 0;
 
   @include mq-up(md) {
     padding: 80px 0;
+  }
+
+  &__swap {
+    position: absolute;
+    top: 0;
+    right: 30px;
+    display: block;
+    width: 60px;
+
+    @include mq-up(md) {
+      display: none;
+    }
   }
 
   &__inner {
