--- a/src/styles/common/components/_gnav.scss
+++ b/src/styles/common/components/_gnav.scss
@@ -41,6 +41,9 @@
   }
 
   &__in {
+    display: flex;
+    height: 100%;
+
     @include mq-up(md) {
       display: flex;
       justify-content: center;
@@ -49,10 +52,10 @@
       height: 127px;
       padding: 0 20px;
       margin: 0 auto;
+    }
 
     @include mq-up(1400) {
       justify-content: space-between;
-    }
     }
   }
 
@@ -89,8 +92,13 @@
   }
 
   &__list {
+    margin: auto;
+    padding: 20px 0;
+
     @include mq-up(md) {
       display: flex;
+      margin: 0;
+      padding: 0;
     }
   }
 
