--- a/src/styles/common/components/_why-we-do.scss
+++ b/src/styles/common/components/_why-we-do.scss
@@ -13,6 +13,18 @@
     padding: 120px 140px 140px;
   }
 
+  &__swap {
+    position: absolute;
+    top: 0;
+    right: 20px;
+    display: block;
+    width: 60px;
+
+    @include mq-up(md) {
+      display: none;
+    }
+  }
+
   &__inner {
     position: relative;
     max-width: 1326px;
@@ -72,6 +84,32 @@
     right: auto;
     left: -90px;
     transform: translateX(-50%) rotate(180deg);
+  }
+
+  &__pagination {
+    position: relative;
+    left: auto !important;
+    bottom: auto !important;
+    margin-top: 20px;
+    font-size: 0;
+
+    @include mq-up(md) {
+      display: none;
+    }
+
+    .swiper-pagination-bullet {
+      width: 8px;
+      height: 8px;
+      margin: 0 5px !important;
+      outline: none;
+      border: 2px solid #354463;
+      background: #fff;
+      opacity: 1;
+    }
+
+    .swiper-pagination-bullet-active {
+      background-color: #354463;
+    }
   }
 
   &__frame {
