--- a/src/views/components/_hero.pug
+++ b/src/views/components/_hero.pug
@@ -44,7 +44,8 @@
       .js-inview.u-fade-in-up
         .c-hero-heading__tag akara
         h2.c-hero-heading__title อาสาปันอิ่ม<br>ปันยิ้มให้สังคม
-        a.c-hero-heading__btn-video.js-modal-video(href='https://www.youtube.com/embed/8dVSeHLBYsQ?autoplay=1', target='_blank') Watch the video
+        //- a.c-hero-heading__btn-video.js-modal-video(href='https://www.youtube.com/embed/8dVSeHLBYsQ?autoplay=1', target='_blank') Watch the video
+        a.c-hero-heading__btn-video(href='#') Watch the video
     .c-hero-count.js-inview
       .c-hero-count__title ยอดร่วมบริจาคล่าสุด
       .c-hero-count__list.js-total-donate
