--- a/src/views/components/_lets-share.pug
+++ b/src/views/components/_lets-share.pug
@@ -10,7 +10,7 @@ section.c-lets-share
             a(href="https://www.youtube.com/channel/UCACP4vYwPZLgrucq-5mu1zQ" target="_blank")
               img(src="assets/images/lets-share/btn_yt.png", alt="Youtube")
           li.c-lets-share__list-item
-            a(href="https://www.facebook.com/akaragroupTH" target="_blank")
+            a(href="https://www.facebook.com/sharer/sharer.php?u=https://www.akaragroup.co.th/csr/" target="_blank")
               img(src="assets/images/lets-share/btn_fb.png", alt="Facebook")
           li.c-lets-share__list-item
             a(href="https://www.instagram.com/akarabrand/?hl=en" target="_blank")
