--- a/src/views/components/_footer.pug
+++ b/src/views/components/_footer.pug
@@ -2,7 +2,7 @@
   .c-footer__in
     .c-footer__container
       a.c-footer__logo(href="/")
-        img(src="assets/images/common/logo_footer.png", alt="akara")
+        img(src="assets/images/common/logo_footer.svg", alt="akara")
 
       .c-footer__info
         .c-footer__phone
