--- a/src/views/components/_our-associate.pug
+++ b/src/views/components/_our-associate.pug
@@ -1,4 +1,4 @@
-section.c-our-associate
+section.c-our-associate._d-none
   .c-our-associate__in
     .js-inview.u-fade-in-up
       h2.c-heading-type1.c-our-associate__label กำลังใจจาก ‘พี่’ ถึง ‘น้อง’
