--- a/src/views/components/_why-we-do.pug
+++ b/src/views/components/_why-we-do.pug
@@ -87,7 +87,7 @@
           .c-how-we-do__heading
             | ร่วมส่งต่อกำลังใจ
           .c-how-we-do__text
-            p เป็นส่วนหนึ่งในการส่งมอบกำลังใจให้กับน้อง ๆ เพียงเขียนข้อความให้กำลังใจลงในการ์ดที่แนบมาในแพ็ค แล้วแชร์ลง Social Media พร้อมติด #อัคราอาสาปันอิ่มปันยิ้มให้สังคม ข้อความที่ส่งเข้ามาอัคราจะนำไปมอบต่อให้น้อง ๆ ภายในโครงการ
+            p เป็นส่วนหนึ่งในการส่งมอบกำลังใจให้กับน้อง ๆ เพียงเขียนข้อความให้กำลังใจลงในการ์ดที่แนบมาในแพ็คแล้วแชร์ลง Facebook และ Instagram พร้อมติด #อัคราอาสาปันอิ่มปันยิ้มให้สังคม ข้อความที่ส่งเข้ามาอัคราจะนำไปมอบต่อให้น้อง ๆ ภายในโครงการ
       .c-how-we-do__item.js-inview.u-fade-in-pop
         .c-how-we-do__card
           figure.c-how-we-do__icon
@@ -102,19 +102,15 @@
       .c-our-impact__heading ยอดร่วมบริจาคล่าสุดของเรา
     .c-our-impact__box-donate.js-inview.u-fade-in-down
       .c-our-impact__box-donate-item
-        .c-our-impact__box-donate-number.js-inview-number(data-number="126") 0
-        .c-our-impact__box-donate-text วัน
-      .c-our-impact__box-donate-item
-        .c-our-impact__box-donate-number.js-inview-number(data-number="8500") 0
+        .c-our-impact__box-donate-number.js-inview-number(data-number="5638") 0
         .c-our-impact__box-donate-text ฟอง
-      .c-our-impact__box-donate-item
-        .c-our-impact__box-donate-number.js-inview-number(data-number="650") 0
-        .c-our-impact__box-donate-text มื้อ
+    .c-our-impact__box-donate-time 16 ตุลาคม 2563 - 8 พฤศจิกายน 2563
+
   .c-box-arrow
     a.c-arrow(href='#activities')
       img.c-arrow-animaton(src="assets/images/common/ico_arrow_down_white.svg", alt="")
 
-.c-activity(id='activities')
+.c-activity(id='activities')._pb-md-30
   .c-activity__inner
     .c-activity__box-title.js-inview.u-fade-in-up
       img.c-activity__swap(src="assets/images/common/icon_swap.svg")
