--- a/src/styles/common/components/_what-we-do.scss
+++ b/src/styles/common/components/_what-we-do.scss
@@ -104,6 +104,10 @@
       height: 100%;
       background: url(../images/what-we-do/img_what_we_do.jpg) center no-repeat;
       background-size: cover;
+
+      @include mq-up(md) {
+        background-position: right center;
+      }
     }
   }
 
