update: final update 4th

--- a/src/views/components/_gnav.pug
+++ b/src/views/components/_gnav.pug
@@ -2,7 +2,7 @@
   .c-gnav__in
     .c-gnav__logo
       a.c-gnav__logo-link(href='/')
-        img(src='assets/images/common/logo.svg' alt='')
+        img(src='assets/images/common/logo.png' alt='AKARA อาสาปันอิ่ม ปันยิ้มให้สังคม')
     button.c-gnav__close(type='button', id='btn-close-menu') x
     ul.c-gnav__list
       li.c-gnav__item
