--- a/src/views/components/_hero.pug
+++ b/src/views/components/_hero.pug
@@ -38,7 +38,7 @@
   .c-hero__main
     h1.c-hero__logo
       a.c-hero__logo-link(href='/')
-        img(src='assets/images/common/logo.svg', alt='AKARA อาสาปันอิ่ม ปันยิ้มให้สังคม')
+        img(src='assets/images/common/logo.png', alt='AKARA อาสาปันอิ่ม ปันยิ้มให้สังคม')
     button.c-hero__btn-menu(type='button', id='btn-open-menu') Menu
     .c-hero-heading
       .js-inview.u-fade-in-up
@@ -51,7 +51,7 @@
         .c-hero-count__list-item
           .c-hero-count__number.js-inview-number(data-number="112748") 0
           .c-hero-count__unit ฟอง
-      .c-hero-count__time 16 ตุลาคม 2563 - 8 พฤศจิกายน 2563
+      .c-hero-count__time ระยะเวลาการร่วมบริจาค 16 ตุลาคม - 6 พฤศจิกายน 2563
 
 
     .c-hero__arrow
