--- a/src/views/components/_lets-share.pug
+++ b/src/views/components/_lets-share.pug
@@ -7,7 +7,10 @@ section.c-lets-share
         p.c-lets-share__text "ทุก ๆ การแบ่งปันของคุณ ช่วยเติมรอยยิ้มให้กับน้อง ๆ"
         ul.c-lets-share__list
           li.c-lets-share__list-item
-            a(href="https://www.facebook.com/sharer/sharer.php?u=https://www.akaragroup.co.th/csr/" target="_blank")
+            a(
+              href="https://www.facebook.com/sharer/sharer.php?u=https://www.akaragroup.co.th/csr/"
+              class="js-fb-share"
+            )
               img(src="assets/images/lets-share/btn_fb.png", alt="Facebook")
           li.c-lets-share__list-item
             a(href="https://www.youtube.com/channel/UCACP4vYwPZLgrucq-5mu1zQ" target="_blank")
