--- a/src/views/components/_meta.pug
+++ b/src/views/components/_meta.pug
@@ -20,11 +20,11 @@ meta(
 )
 meta(
   property="og:title"
-  content=(meta && meta.title ? meta.title : "")
+  content=(meta && meta.ogTitle ? meta.ogTitle : "")
 )
 meta(
   property="og:description"
-  content=(meta && meta.description ? meta.description : "")
+  content=(meta && meta.ogDesc ? meta.ogDesc : "")
 )
 meta(
   property="og:type"
