--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -4,7 +4,13 @@ block variables
     const meta = {
       title: 'AKARA GROUP - อาสาปันอิ่ม ปันยิ้มให้สังคม',
       keyword: 'AKARA GROUP - อาสาปันอิ่ม ปันยิ้มให้สังคม',
-      description: 'AKARA GROUP - อาสาปันอิ่ม ปันยิ้มให้สังคม'
+      description: 'AKARA GROUP - อาสาปันอิ่ม ปันยิ้มให้สังคม',
+      ogTitle: 'อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม',
+      ogDesc: 'ร่วมเป็นส่วนหนึ่งในการส่งมอบรอยยิ้มให้กับน้อง ๆ ที่ขาดแคลน',
+      image: 'http://akaragroup.co.th/csr/assets/images/common/img_og.png',
+      type: 'website',
+      url: 'http://akaragroup.co.th/csr',
+      site_name: 'อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม',
     }
 
 block append scripts
