--- a/src/styles/common/components/_hero.scss
+++ b/src/styles/common/components/_hero.scss
@@ -197,7 +197,7 @@
 
   &__arrow {
     position: absolute;
-    bottom: 60px;
+    bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
 
@@ -293,7 +293,7 @@
 .c-hero-count {
   display: inline-block;
   padding: 16px;
-  min-width: 245px;
+  min-width: 290px;
   background-color: $yellow;
   border-radius: 15px;
   opacity: 0;
@@ -306,9 +306,9 @@
     transition-delay: 0.6s;
   }
 
-  @include mq-down(md) {
+  @include mq-down(896) {
     position: absolute;
-    bottom: 140px;
+    bottom: 90px;
     left: 50%;
     transform: translate(-50%, -30px);
 
@@ -344,7 +344,7 @@
   &__list {
     display: flex;
     justify-content: center;
-    margin: 10px -16px 0;
+    margin: 5px -16px 0;
 
     @include mq-up(1400) {
       margin-right: -30px;
@@ -363,35 +363,36 @@
 
   &__number {
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 2.8rem;
     line-height: 1;
     color: $white;
 
     @include mq-up(md) {
-      font-size: 2.2rem;
+      font-size: 2.8rem;
     }
 
     @include mq-up(1400) {
-      font-size: 2.8rem;
+      font-size: 3.4rem;
     }
   }
 
   &__unit {
     margin-top: 8px;
-    font-size: 1.6rem;
+    font-size: 2.3rem;
     line-height: 1;
     color: $white;
 
     @include mq-up(md) {
-      font-size: 1.8rem;
+      font-size: 2.4rem;
     }
   }
 
   &__time {
     margin-top: 10px;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: #fff;
     text-align: center;
+    white-space: nowrap;
 
     @include mq-up(md) {
       font-size: 1.4rem;
