--- a/src/styles/common/components/_our_impact.scss
+++ b/src/styles/common/components/_our_impact.scss
@@ -57,7 +57,7 @@
     color: $white;
 
     @include mq-up(md) {
-      font-size: 6.4rem;
+      font-size: 6.2rem;
       line-height: 1.3;
       margin-top: 20px;
     }
@@ -87,24 +87,24 @@
     }
 
     &-number {
-      font-size: 2.8rem;
+      font-size: 3.6rem;
       font-weight: 600;
       color: $white;
       text-align: center;
 
       @include mq-up(md) {
-        font-size: 6.7rem;
+        font-size: 6.8rem;
       }
     }
 
     &-text {
-      font-size: 2.4rem;
+      font-size: 3.2rem;
       font-weight: 500;
       color: $white;
       text-align: center;
 
       @include mq-up(md) {
-        font-size: 5.9rem;
+        font-size: 6.1rem;
       }
     }
 
@@ -116,6 +116,7 @@
       color: #fff;
       text-align: center;
       transform: translateX(-50%);
+      white-space: nowrap;
 
       @include mq-up(md) {
         bottom: 110px;
