--- a/src/views/components/_why-we-do.pug
+++ b/src/views/components/_why-we-do.pug
@@ -58,7 +58,7 @@
       .js-inview.u-fade-in-up
         .c-what-we-do__heading อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม
         .c-what-we-do__content
-          p โครงการ ‘อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม’ ร่วมกับ โครงการ ‘มื้อนี้ พี่เลี้ยง’ ภายใต้การดำเนินงานของ กสศ. มีวัตถุประสงค์เพื่อช่วยเหลือน้อง ๆ กว่า 100,000 คน ที่ประสบปัญหาขาดแคลนอาหารและภาวะทุพโภชนาการ
+          p โครงการ ‘อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม’ ร่วมกับ โครงการ ‘มื้อนี้พี่เลี้ยง’ ภายใต้การดำเนินงานของ กสศ. มีวัตถุประสงค์เพื่อช่วยเหลือน้อง ๆ กว่า 100,000 คน ที่ประสบปัญหาขาดแคลนอาหารและภาวะทุพโภชนาการ
           br
           p โดยวิธีการดำเนินการของเรา คือ ทุก ๆ การหยิบสินค้าไข่ไก่อัครา 1 แพ็ค เราสมทบไข่ไก่มอบให้กับน้อง ๆ เพิ่มอีก 2 ฟอง เพื่อสนับสนุนให้น้อง ๆ ได้รับสารอาหารที่พอเพียงต่อร่างกาย มีโภชนาการทางด้านอาหารและความเป็นอยู่ที่ดีขึ้นอย่างยั่งยืนในระยะยาว
       .c-box-arrow
@@ -79,7 +79,7 @@
             br._d-sm-block._d-md-none
             | ส่งต่อ 2 ฟอง
           .c-how-we-do__text
-            p ทุก ๆ การหยิบสินค้าไข่ไก่อัครา 1 แพ็ค (แพ็ค 10 ฟอง) ที่มีสติกเกอร์โครงการ ‘อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม’ แปะอยู่บนแพ็ค อัคราบริจาคไข่ไก่เพิ่มอีก 2 ฟอง โดยมีเป้าหมายการบริจาคทั้งหมด 100,000 ฟอง
+            p ทุก ๆ การหยิบสินค้าไข่ไก่อัครา 1 แพ็ค (แพ็ค 10 ฟอง) ที่มีสติกเกอร์โครงการ ‘อัครา อาสาปันอิ่ม ปันยิ้มให้สังคม’ แปะอยู่บนแพ็ค อัคราบริจาคไข่ไก่เพิ่มอีก 2 ฟอง
       .c-how-we-do__item.js-inview.u-fade-in-pop
         .c-how-we-do__card
           figure.c-how-we-do__icon
@@ -104,7 +104,7 @@
       .c-our-impact__box-donate-item
         .c-our-impact__box-donate-number.js-inview-number(data-number="112748") 0
         .c-our-impact__box-donate-text ฟอง
-    .c-our-impact__box-donate-time 16 ตุลาคม 2563 - 8 พฤศจิกายน 2563
+    .c-our-impact__box-donate-time ระยะเวลาการร่วมบริจาค 16 ตุลาคม - 6 พฤศจิกายน 2563
 
   .c-box-arrow
     a.c-arrow(href='#activities')
